Bug 472354 - Kate does not "wrap around" when cycling through bookmarks.
Summary: Kate does not "wrap around" when cycling through bookmarks.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-18 12:19 UTC by matviy.renardo
Modified: 2023-08-05 18:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description matviy.renardo 2023-07-18 12:19:19 UTC
1. Create at least two bookmarks in a file.
2. Press the button to cycle between bookmarks several times.
3. Once it has reached the last bookmark, it does not "start over" by jumping to the first/topmost bookmark. Instead, it just stops. It should jump back to the top, or at the least have an option for this. If there is such an option, I have not yet found it.
Comment 1 Christoph Cullmann 2023-07-31 18:05:39 UTC
Perhaps just wrapping around per default would make sense.
Comment 2 Bug Janitor Service 2023-08-05 15:29:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/587
Comment 3 Christoph Cullmann 2023-08-05 18:21:56 UTC
Git commit 87b2184be467e5f2747c7583b77675b57710f875 by Christoph Cullmann.
Committed on 05/08/2023 at 17:26.
Pushed by cullmann into branch 'master'.

allow to cycle through bookmarks

M  +22   -3    src/utils/katebookmarks.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/87b2184be467e5f2747c7583b77675b57710f875