allow to cycle through bookmarks

BUG: 472354